crates/compiler/test_syntax/tests/snapshots/pass/when_in_list.expr.formatted.roc
[
    when 2 is
        8 ->
            [
            ],
]