crates/compiler/test_syntax/tests/snapshots/fail/list_pattern_not_terminated.expr.roc
when [] is
    [1, 2, -> ""
